--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
+## Email Configuration
+EMAIL_ADDRESS=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+IMAP_SERVER=imap.gmail.com
+
+## Google API Keys
 GOOGLE_API_KEY=your_google_api_key
 GEMINI_API_KEY=your_gemini_api_key
+
+## Document AI Configuration
 GOOGLE_CLOUD_PROJECT_ID=your_project_id
 DOCUMENT_AI_PROCESSOR_ID=your_processor_id
+
+## Optional Paths
 PASSPORT_IMAGE_PATH=path/to/passport_image.jpg
 SOURCE_YOLO_MODEL=path/to/source/yolo/model
 SOURCE_CLASSIFIER_MODEL=path/to/source/classifier/model
